@@ -1,3 +1,0 @@
-#define RESET_PID
-#include <tcb-offsets.h>
-#include "../clone.S"
